Bug 123499, enable arbitrary HTTP commands via XMLHttpRequest. Patch from matthew@mjwilson.demon.co.uk, r=heikki, sr=darin.